--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ Location
 <!-- Primary Call to Action -->
 <div class='row'>
    <div id='pln-cta' class='col-10'>
-     <p>Drones, UAVs (unmanned aerial vehicles) and traditional model aircraft are becoming increasingly popular.</p>
-     <p>You are just six short steps away from planning a safe, leagal and enjoyable flight - we look forward to seeing the footage.</p>
+     <p>Drones, UAVs (unmanned aerial vehicles) and traditional model aircraft are becoming increasingly popular.<br>
+     <br>You are just six short steps away from planning a safe, leagal and enjoyable flight - we look forward to seeing the footage.</p>
      <div class="row">
       <div id="pln-cta-primary" class='btn btn-primary col-8'>Get Started</div>
     </div>
@@ -395,61 +395,83 @@ Location
  
 <div id="pln-flsummary" class="col-12"><p>You may wish to return to the <a id="pln-param-rtn" onclick="showMenuComponent('FlightParameters');">Flight Parameters</a> page to determine your flight category.</p></div>
 </div>
-<!-- Guidance Bar taking the user through the steps to plan the flight -->
-<div class="row pln-steps">
-    <!-- Step Three-->
-    <div class='col-4'>
-        <p id="pln-step-three" class="pln-param-instruct"><span class="pln-step">Step Three</span>Enter a location, review the Ordnance Survey and Satellite maps against the flight category.</p>
-    </div>
-    <!-- Step Four-->
-    <div class='col-4' id="pln-step-four-1">
-        <p id="pln-step-four" class="pln-param-instruct"><span class="pln-step">Step Four</span>View the <a id="pln-dsmap-1">Drone Safety Map</a> for air restrictions and ground hazards.</p>
-    </div>
-
-    <!-- Step Five-->
-    <div class='col-4'>
-        <p id="pln-step-five" class="pln-param-instruct"><span class="pln-step">Step Five</span>Use the top-left corner menu of the Drone Safety Map to <b>Submit a Flight Report.</b></p>
-    </div>
-</div>
 <div class="row">
-  
-  <div id="pln-geo" class="col-2">
-      <h1 class="pln-h1">Location Details</h1>
+    <!-- Location Section -->
+    <div id="pln-geo" class="col-2">
 
-      <!-- Following form dervied from Bootstrap https://getbootstrap.com/docs/4.1/components/forms/ !-->
-      <form>
-        <div class="form-group">
-          <label for="pln-Postcode">Postcode (Enter when complete)</label>
-          <input type="text" class="form-control" id="pln-postcode" aria-describedby="UK Postcode" placeholder="Enter postcode">
+        <!-- Step Three-->
+        <div class="row">
+            <div class='col-12 pln-steps-location'>
+                <p id="pln-step-three" class="pln-param-instruct"><span class="pln-step">Step Three</span>Enter a location.</p>
+            </div>
         </div>
-        <div class="form-group">
-          <label for="pln-Latitude">Latitude</label>
-          <input type="number" class="form-control" id="pln-latitude" name="plnLat" placeholder="Decimal Latitude">
-          <label for="pln-Longitude">Longitude</label>
-          <input type="number" class="form-control" id="pln-longitude" name="plnLong" placeholder="Decimal Longitdue">
-          <small id="latlongHelp" class="form-text text-muted">You may wish to further localise the latitude and longitude</small>
+        <!--  End of Step Three-->
+
+        <h1 class="pln-h1">Location</h1>
+
+        <!-- Following form dervied from Bootstrap https://getbootstrap.com/docs/4.1/components/forms/ !-->
+        <form class="pln-location-frm">
+            <div class="form-group">
+                <label for="pln-Postcode">Postcode (Enter when complete)</label>
+                <input type="text" class="form-control" id="pln-postcode" aria-describedby="UK Postcode"
+                    placeholder="Enter postcode">
+            </div>
+            <div class="form-group">
+                <label for="pln-latitude">Latitude</label>
+                <input type="number" class="form-control" id="pln-latitude" name="plnLat"
+                    placeholder="Decimal Latitude">
+                <label for="pln-longitude">Longitude</label>
+                <input type="number" class="form-control" id="pln-longitude" name="plnLong"
+                    placeholder="Decimal Longitdue">
+                <small id="latlongHelp" class="form-text text-muted">You may wish to further localise the latitude and
+                    longitude</small>
+            </div>
+
+            <div class="btn btn-primary" id="pln-recenter">Re-Centre Maps</div>
+
+            <!-- Step Four-->
+            <div class='col-12 pln-steps-location'>
+                <p id="pln-step-four" class="pln-param-instruct"><span class="pln-step">Step Four</span>Review the Ordnance Survey and Satellite maps against the flight category.<a id="pln-stepfour-next">Next</a></p>
+            </div>
+            <!-- End of Step Four -->
+
+            <!-- div id="pln-dsmap-2" class="btn btn-primary" onclick="droneSafetyMap();">Drone Safety Map</div-->
+
+        </form>
+        <!-- End of Form -->
+
+    </div>
+    <!-- End of Location Section -->
+
+    <!-- Start of Maps Columns-->
+    <div class="col-10" id="pln-maps">
+        <div class="row">
+            <div id="pln-osmap" class="col-6">
+                        <p>OS Map</p>
+            </div>
+
+            <div id="pln-satview" class="col-6">
+                    <p>Satellite View</p>
+            </div>
         </div>
         
-        <div class="btn btn-primary" id="pln-recenter">Re-Centre Maps</div>
-<div id="pln-dsmap-2" class="btn btn-primary" onclick="droneSafetyMap();">Drone Safety Map</div>
 
-      </form>
     </div>
-
-
-   <div id="pln-osmap"  class="col-5">
-    <p>OS Map</p>
-   </div>
-  
-
-
-  
-
- <div  id="pln-satview"  class="col-5">
-   <p>Satellite View</p>
- </div>
-
-
+</div>
+        <div class="row">
+                <!-- Step Five-->
+                <div class='col-12 pln-steps-location' id="pln-step-five-1">
+                    <p id="pln-step-five" class="pln-param-instruct"><span class="pln-step">Step Five</span>View the <a
+                            id="pln-dsmap-1">Drone Safety Map</a> for air restrictions and ground hazards.</p>
+                </div>
+                <!-- End of Step Five-->
+         </div>
+<div class="row">
+    <!-- Step Six-->
+        <div class='col-12 pln-steps-location'>
+            <p id="pln-step-six" class="pln-param-instruct"><span class="pln-step">Step Six</span>Use the top-left corner menu of the Drone Safety Map to <b>Submit a Flight Report.</b></p>
+        </div>
+    <!-- End of Step Six-->
 </div>
 <div class="row">
 <div class="col-4">Contains OS data © Crown copyright and database right 2021</div>
@@ -466,7 +488,7 @@ Location
 <!-- Placeholder for Footer Links -->
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 10/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0193</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 10/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0220</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AqXZ0hvITdpn5g-2a8bbicLdCTTJgoQHACH441QxLNJDdc_Qlpl6-3BHR0_lGQpJ' async defer></script>
