--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Location
 <div class='row'>
    <div id='pln-cta' class='col-10'>
      <p>Drones, UAVs (unmanned aerial vehicles) and traditional model aircraft are becoming increasingly popular.<br>
-     <br>You are just six short steps away from planning a safe, leagal and enjoyable flight - we look forward to seeing the footage.</p>
+     <br>You are just six short steps away from planning a safe, legal and enjoyable flight - we look forward to seeing the footage.</p>
      <div class="row">
       <div id="pln-cta-primary" class='btn btn-primary col-8'>Get Started</div>
     </div>
@@ -488,7 +488,7 @@ Location
 <!-- Placeholder for Footer Links -->
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 10/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0220</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 11/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0221</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AqXZ0hvITdpn5g-2a8bbicLdCTTJgoQHACH441QxLNJDdc_Qlpl6-3BHR0_lGQpJ' async defer></script>
