Mobile Phone Design 1st Draft
Site has been adapted for display on a mobile, but needs some development on flow of the steps

--- a/index.html
+++ b/index.html
@@ -64,12 +64,18 @@
     <section id='pln-welcome' class='pln-cta'>
       <!-- Primary Call to Action -->
       <div class='row'>
-        <div id='pln-cta' class='col-sm-12 col-10'>
+        <div id='pln-cta' class='col-12 col-md-10'>
+          <div class="d-none d-md-block">
           <p>Drones, UAVs (unmanned aerial vehicles) and traditional model aircraft are becoming increasingly
             popular.<br>
             <br>You are just six short steps away from planning a safe, legal and enjoyable flight - we look forward to
             seeing the footage.
           </p>
+          </div>
+          <div class="d-block d-md-none">
+          <p>You are just six steps away planning a safe, legal and enjoyable flight.
+          </p>
+          </div>
           <div class="row">
             <div id="pln-cta-primary" class='btn btn-primary col-sm-12 col-8'>Get Started</div>
           </div>
@@ -78,7 +84,7 @@
       <!-- End of Primary Call to Action -->
       <div class="pln-notice-container col-8">
         <div class="row">
-          <div class="col-2 pln-notice-header">
+          <div class="col-2 pln-notice-header d-none d-md-block">
             <p>Remember</p>
           </div>
           <div class="col-10 pln-notice">
@@ -187,7 +193,7 @@
         <!-- End of Competencies Section-->
 
         <!-- Choose the Category of Drone, only one can be selected -->
-        <div id="pln-dronecategories" class="col-4">
+        <div id="pln-dronecategories" class="col-sm-12 col-md-4">
 
           <!-- Step Two-->
           <div class="row pln-steps">
@@ -336,7 +342,7 @@
 
         <!-- End of Drone Categories-->
         <!-- List the flight categories, mark those available with the drone and pilot competency combination -->
-        <div id="pln-flightcategories" class="col-4">
+        <div id="pln-flightcategories" class="col-sm-12 col-md-4">
 
           <!-- Results from Step One and Step Two-->
           <div class="row pln-steps">
@@ -429,7 +435,7 @@
       </div>
       <div class="row">
         <!-- Location Section -->
-        <div id="pln-geo" class="col-2">
+        <div id="pln-geo" class="col-sm-12 col-md-2">
 
           <!-- Step Three-->
           <div class="row">
@@ -477,13 +483,13 @@
         <!-- End of Location Section -->
 
         <!-- Start of Maps Columns-->
-        <div class="col-10" id="pln-maps">
+        <div class="col-12 col-md-10" id="pln-maps">
           <div class="row">
-            <div id="pln-osmap" class="col-6">
+            <div id="pln-osmap" class="col-10 mx-auto col-md-6 m-md-0">
               <p>OS Map</p>
             </div>
 
-            <div id="pln-satview" class="col-6">
+            <div id="pln-satview" class="col-10 mx-auto col-md-6 m-md-0">
               <p>Satellite View</p>
             </div>
           </div>
