Minor Adjustments to Formating
Minor adjustments and re-instated drone safety map event listeners

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
         </div>
         <!-- End of Step Six-->
       </div>
-      <div class="pln-attrib">
+      <div class="pln-attrib d-none d-md-inline">
           <p>Contains OS data  Crown copyright and database right 2021. || Contains Royal Mail data  Royal Mail copyright and database right 2021. || Source: Office for National Statistics licensed under the Open Government Licence v.3.0</p>
 
       </div>
