--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel='icon' href='assets/images/favicon.ico'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"  integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-  <link rel='stylesheet' href='assets/css/uavflightplanner.css'>
+  <link rel='stylesheet' href='assets/css/uav-flight-planner.css'>
   <!-- End of Links to CSS Libaries-->
   <title>UAV Flight Planner</title>
 </head>
@@ -527,10 +527,9 @@
 
   <footer>
     <!-- Placeholder for Footer Links -->
-    <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
-    <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute
+    <p class='footer-sm'>Created by Stephen Clarke on behalf of The Code Institute
       ||&nbsp;Last update on 11/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0223</span>.<span
-        class='footer-sm' id='CSSSerNo'></span><span class='footer-sm' id='JSSerNo'></span></p>
+        class='footer-sm' id='CSSSerNo'></span><span class='footer-sm' id='JSSerNo'></span> || For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
@@ -542,7 +541,7 @@
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWmo-Ndb3YTzwMWSHAzg8an9dM9WDOlMk&callback=initialize&libraries=&v=weekly"
     async></script>
-  <script src='assets/js/uavflightplanner.js'></script>
+  <script src='assets/js/uav-flight-planner.js'></script>
 </body>
 
 </html>
