Responsive Adjustments for tablet
Made responsive adjustments for tablet for location page

--- a/index.html
+++ b/index.html
@@ -466,8 +466,11 @@
               <label for="pln-longitude">Longitude</label>
               <input type="number" class="form-control" id="pln-longitude" name="plnLong"
                 placeholder="Decimal Longitdue">
-              <small id="latlongHelp" class="form-text text-muted">You may wish to further localise the latitude and
+              <small id="latlongHelp" class="form-text text-muted d-none d-xl-inline">You may wish to further localise the latitude and
                 longitude</small>
+            </div>
+            <div class="pln-attrib d-none d-md-inline">
+              <p>Contains Royal Mail data  Royal Mail copyright and database right 2021.</p>
             </div>
 
             <div class="btn btn-primary" id="pln-recenter">Re-Centre Maps</div>
@@ -517,10 +520,7 @@
         </div>
         <!-- End of Step Six-->
       </div>
-      <div class="pln-attrib d-none d-md-inline">
-          <p>Contains OS data  Crown copyright and database right 2021. || Contains Royal Mail data  Royal Mail copyright and database right 2021. || Source: Office for National Statistics licensed under the Open Government Licence v.3.0</p>
-
-      </div>
+      
       <!-- Location 'Fixed' buttons-->
       <div id="pln-stepfour-next" class="btn btn-primary pln-btn-fixed pln-btn-right">Next</div>
       <div id="pln-dronesafety" class="btn btn-primary pln-btn-fixed pln-btn-left">Drone Safety Map</div>
