--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img class='logoleft' src='assets/images/logo.png' alt='Navigation Logo'>
     </div>
     <!-- Navbar Text-->
-    <a href='#Home-Top' class="navbar-brand">
+    <a href='#HomePage-Top' class="navbar-brand">
         <div class="header-lg">UAV</div>
         <div class="header-sm">Flight Planner</div>
     </a>
@@ -48,7 +48,7 @@
           <a href='#HomePage-Top' class='nav-link MenuButton' id='HomePageButton' onclick='showMenuComponent("HomePage")' data-toggle='collapse' data-target='#navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation'>Home</a>
         </li>
         <li class='nav-item mr-2'>
-          <a href='#FlightParameters-Top' class='nav-link MenuButton' id='FlightParametersButton' onclick='showMenuComponent("FlightParameters")' data-toggle='collapse' data-target='#navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation'>Flight Parameters</a>
+          <a href='#FlightParameters-Top' class='nav-link MenuButton' id='FlightParametersButton' onclick='showMenuComponent("FlightParameters")' data-toggle='collapse' data-target='#navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation'><span class="d-none d-lg-inline">Flight</span> Parameters</a>
         </li>
         <li class='nav-item mr-2'>
           <a href='#Location-Top' class='nav-link MenuButton' id='LocationButton' onclick='showMenuComponent("Location")' data-toggle='collapse' data-target='#navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation'>Location</a>
@@ -81,7 +81,7 @@
           </p>
           </div>
           <div class="row">
-            <div id="pln-cta-primary" class='btn btn-primary col-sm-12 col-8'>Get Started</div>
+            <div id="pln-cta-primary" class='btn btn-primary col-md-8 col-12'>Get Started</div>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
           <div class="col-2 pln-notice-header d-none d-md-block">
             <p>Remember</p>
           </div>
-          <div class="col-10 pln-notice">
+          <div class="col-12 col-md-10 pln-notice">
             <p>It is the pilot's responsibility to ensure that all flights are safe and legal. If in doubt do not fly.
             </p>
           </div>
